Renamed project to 'nervous'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required( VERSION 3.1 )
 
-project( GLFW-CMake-starter )
+project( nervous )
 
 find_package( OpenGL REQUIRED )
 
@@ -19,14 +19,14 @@ set( GLFW-CMAKE-STARTER-SRC
      main.c
      )
      
-add_executable( GLFW-CMake-starter WIN32 ${GLFW-CMAKE-STARTER-SRC} )
-target_link_libraries( GLFW-CMake-starter ${OPENGL_LIBRARIES} glfw )
-target_link_libraries( GLFW-CMake-starter ${OPENGL_LIBRARIES} glut )
+add_executable( nervous WIN32 ${GLFW-CMAKE-STARTER-SRC} )
+target_link_libraries( nervous ${OPENGL_LIBRARIES} glfw )
+target_link_libraries( nervous ${OPENGL_LIBRARIES} glut )
 
 if( MSVC )
     if(${CMAKE_VERSION} VERSION_LESS "3.6.0") 
-        message( "\n\t[ WARNING ]\n\n\tCMake version lower than 3.6.\n\n\t - Please update CMake and rerun; OR\n\t - Manually set 'GLFW-CMake-starter' as StartUp Project in Visual Studio.\n" )
+        message( "\n\t[ WARNING ]\n\n\tCMake version lower than 3.6.\n\n\t - Please update CMake and rerun; OR\n\t - Manually set 'nervous' as StartUp Project in Visual Studio.\n" )
     else()
-        set_property( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT GLFW-CMake-starter )
+        set_property( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT nervous )
     endif()
 endif()
